--- a/DCHome/FriendsCasts.css
+++ b/DCHome/FriendsCasts.css
@@ -18,9 +18,6 @@
     main {
         grid-area: m;
     }
-     aside {
-        grid-area: a;
-     }
     footer {
         grid-area: f;
     }
@@ -31,7 +28,6 @@
     "n "
     "h "
     "m"        
-    "a"
     "f";
 }
 /* End of Grid */
@@ -43,7 +39,6 @@
      " n   n "
      " h   h "
      " m   m "
-     " a   a "
      " f   f "
      / 50% 50%;
     }
@@ -59,9 +54,8 @@
        " n   n   n"
        " h   h   h"
        " m   m   m"
-       " a   a   a"
        " f   f   f"
-       / 150px 1fr 30%;
+       / 150px 1fr 10%;
        }
 }
 @media (max-width: 768px) {
@@ -69,13 +63,6 @@
      height: 50vh;
     }
 }
-
-@media (max-width: 768px) {
-    .hero-content h1 {
-     height: 20vh;
-    }
-}
-
 /* End of Media Query */
 
 /* Start of Hero Image */
@@ -85,10 +72,10 @@
     background-position: center;
     height: 120vh;
     color: white;
+    margin-bottom: 20px;
     display: flex;
-    margin-bottom: 0;
-    /* flex-direction: column;
-    justify-content: center; */
+    flex-direction: column;
+    justify-content: center;
 }
 
 .hero-content {
@@ -97,22 +84,7 @@
     width: 100%;
     padding: 40px;
 }
-
-/* #herodisclaimer {
-    margin-top: 0;
-} */
-
-/* .hero-content h1 {
-    font-family: "Covered By Your Grace", cursive;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 6em;
-    margin: 0;
-    color: rgb(37, 112, 2);
-    display: flex;
-    justify-content: center;
-    text-align: flex-start;
-} */
+/* 
 /* End of Hero Image */
 
 
@@ -122,8 +94,6 @@ nav ul {
     padding-left: 0;
     margin-top: 0;
     margin-bottom: 0;
-    /* border-top: 1px solid #0f4605;
-    border-bottom: 1px solid #0f4605; */
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: row;
@@ -135,7 +105,6 @@ nav li {
     font-family: "Covered By Your Grace", cursive;
     font-style: italic;
     font-size: 1em;
-    /* border-bottom: 1px solid #eeeeee; */
     text-align: center;
     padding-top: 1em;
     padding-bottom: 0.5em;
@@ -196,25 +165,19 @@ nav a:visited {
 nav a:active {
     color: rgb(177, 13, 13)
 }
-
-/* img {
-    margin-top: 5px;
-    margin-bottom: 5px;
-} */
 /* End of Nav */
 
 /* Start of Main */
 body {
     background-color: rgb(171, 139, 122);
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 #img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: rgb(254, 202, 149); */
 }
 
 .castsheading {
@@ -222,13 +185,6 @@ body {
     display: flex;
     justify-content: center; 
 }
-
-/* h2 {
-    font-family: "Covered By Your Grace", cursive;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 3em;
-} */
   
 h3 {
     font-family: helvetica, sans-serif, 'times new roman';
@@ -262,6 +218,7 @@ footer {
     flex-direction: row;
 }
 
+/* added padding to this page footer as the height will not be consistent with the other page's footer if padding is not added. The 0 margin under p is causing the footer to be smaller hence padding is added.*/
 .footerbox {
     padding-top: 13px;
     padding-bottom: 13px;
