--- a/DCHome/FriendsVideo.css
+++ b/DCHome/FriendsVideo.css
@@ -18,9 +18,6 @@
     main {
         grid-area: m;
     }
-     aside {
-        grid-area: a;
-     }
     footer {
         grid-area: f;
     }
@@ -31,7 +28,6 @@
     "n "
     "h "
     "m"        
-    "a"
     "f";
 }
 /* End of Grid */
@@ -43,7 +39,6 @@
      " n   n "
      " h   h "
      " m   m "
-     " a   a "
      " f   f "
      / 50% 50%;
     }
@@ -59,7 +54,6 @@
        " n   n   n"
        " h   h   h"
        " m   m   m"
-       " a   a   a"
        " f   f   f"
        / 150px 1fr 30%;
        }
@@ -67,12 +61,6 @@
 @media (max-width: 768px) {
     .hero {
      height: 50vh;
-    }
-}
-
-@media (max-width: 768px) {
-    .hero-content h1 {
-     height: 20vh;
     }
 }
 /* End of Media Query */
@@ -84,10 +72,10 @@
     background-position: center;
     height: 120vh;
     color: white;
-    margin-bottom: 0;
-    /* display: flex;
+    margin-bottom: 20px;
+    display: flex;
     flex-direction: column;
-    justify-content: center; */
+    justify-content: center;
 }
 
 .hero-content {
@@ -95,24 +83,6 @@
     bottom: 280px;
     width: 100%;
     padding: 40px;
-}
-/* 
-.hero-content p {
-    font-family: "Covered By Your Grace", cursive;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 3em;
-    margin: 0;
-    color: rgb(37, 112, 2);
-    display: flex;
-    justify-content: center;
-    align-content: flex-end;
-} */
-
-@media only screen and (max-width: 768px) {
-    .hero h1 {
-        font-size: 3em;
-    }
 }
 /* End of Hero Image */
 
@@ -122,8 +92,6 @@ nav ul {
     padding-left: 0;
     margin-top: 0;
     margin-bottom: 0;
-    /* border-top: 1px solid #0f4605;
-    border-bottom: 1px solid #0f4605; */
     background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: row;
@@ -135,7 +103,6 @@ nav li {
     font-family: "Covered By Your Grace", cursive;
     font-style: italic;
     font-size: 1em;
-    /* border-bottom: 1px solid #eeeeee; */
     text-align: center;
     padding-top: 1em;
     padding-bottom: 0.5em;
@@ -196,11 +163,6 @@ nav a:visited {
 nav a:active {
     color: rgb(177, 13, 13)
 }
-
-/* img {
-    margin-top: 10px;
-    margin-bottom: 5px;
-} */
 /* End of Hero Image */
 
 /* Start of Body */
@@ -229,13 +191,6 @@ body {
     margin-bottom: 20px;
     border-style: none;
 }
-
-/* #heading {
-    font-family: "Covered By Your Grace", cursive;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
-} */
 
 h4 {
     text-align: center;
